2005-04-02  Jon A. Cruz  <jon@joncruz.org>

	* src/color-profile.h, src/color-profile.cpp,
	  src/color-profile-fns.h, src/sp-image.h, src/sp-image.cpp:

	  Initial support of color-profile on <image> elements.

2005-04-02  Jon A. Cruz  <jon@joncruz.org>

	* src/color-profile.h, src/color-profile.cpp,
	  src/color-profile-fns.h, src/Makefile_insert, src/attributes.cpp,
	  src/attributes.h, src/sp-object-repr.cpp:

	  Adding support for <color-profile> element.

2005-04-02  Jon A. Cruz  <jon@joncruz.org>

	* src/knot.h: Fixed warning messages.

2006-04-01  Jon A. Cruz  <jon@joncruz.org>

	* src/ui/widget/selected-style.cpp:

	  Safety check for null pointer.
	
2006-04-01  Jon A. Cruz  <jon@joncruz.org>

	* configure.ac, src/interface.cpp, src/dialogs/swatches.cpp:

	  Introducing optional LittleCms use.
	
2006-03-31  MenTaLguY  <mental@rydia.net>

    * src/dyna-draw-context.cpp, src/dyna-draw-context.cpp:

	  merge ::dragging and ::dynahand

2006-03-31  MenTaLguY  <mental@rydia.net>

    * src/dyna-draw-context.h: add documentation

2006-03-29  Andrius R. <knutux@gmail.com>

	* src/enums.h, src/selection-chemistry.cpp,
	  src/selection.h, src/selection.cpp,
	  src/ui/dialog/inkscape-preferences.cpp,
	  src/ui/dialog/inkscape-preferences.h:

	  patch #1450307 - option for select all to work in layer with it's sub-layers

2006-03-29  Andrius R. <knutux@gmail.com>

	* po/lt.po: Translated and added new language - Lithuanian.

2006-03-28  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp, src/dialogs/swatches.cpp:

	  Fixing name of temporary non-standard tag attributes.
	
2006-03-28  MenTaLguY  <mental@rydia.net>

    * src/layer-manager.cpp, src/layer-manager.h: draft of layer manager

2006-03-28  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp, src/dialogs/eek-color-def.h,
	  src/dialogs/eek-preview.h, src/dialogs/eek-preview.cpp,
	  src/dialogs/swatches.h, src/dialogs/swatches.cpp:

	  Changed objects to only get liked to "linkable" colors.
	